[feat]: add better responsiveness

--- a/data-visualization/src/css/Form.css
+++ b/data-visualization/src/css/Form.css
@@ -1,5 +1,7 @@
-.form {
-  background-color: "#E0E8F3" !important;
+.form-align {
+  display: flex;
+  justify-content: center;
+  font-family: "Kanit", sans-serif;
 }
 .form-heading {
   font-family: "Kanit", sans-serif;
